MasterTrailRepo/src/objects/position__c.object
<CustomObject>
    <fields>
        <fullName>Date_closed__c</fullName>
        <label>Date closed</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description Test</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Position Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>date_opened__c</fullName>
        <label>date opened</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <picklist>
            <picklistValues>
                <fullName>engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>duration__c</fullName>
        <label>duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>education__c</fullName>
        <label>education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newyork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>min_pay__c</fullName>
        <label>min pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pay__c</fullName>
        <label>Pay Grade</label>
        <picklist>
            <picklistValues>
                <fullName>c-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>act-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eng-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>skills_required__c</fullName>
        <label>skills required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>new</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sub_status__c</fullName>
        <label>sub-status</label>
        <picklist>
            <picklistValues>
                <fullName>pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>position title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>